CRUD actualizado